[package]
name = "rkbx_os2l"
version = "0.0.1"
edition = "2024"
authors = ["fjel"]
repository = "https://github.com/fjel/rkbx_os2l"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-arms = {version = "0.9.4", features = ["external"]}
winapi = "0.3.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
mdns-sd = "0.11"
